--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.2",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0"
