--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0"
   }
