--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "graphql": "^16.8.1",
     "react": "18.2.0",
@@ -22,8 +23,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-secure-store": "~12.8.1"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
